@@ -5,8 +5,10 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.*;
 
 import java.util.Arrays;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import javax.validation.ConstraintViolation;
 import javax.validation.Validation;
@@ -29,9 +31,11 @@ import de.tum.in.www1.artemis.domain.Exercise;
 import de.tum.in.www1.artemis.domain.Lecture;
 import de.tum.in.www1.artemis.domain.User;
 import de.tum.in.www1.artemis.domain.enumeration.DisplayPriority;
+import de.tum.in.www1.artemis.domain.enumeration.SortingOrder;
 import de.tum.in.www1.artemis.domain.exam.Exam;
 import de.tum.in.www1.artemis.domain.metis.CourseWideContext;
 import de.tum.in.www1.artemis.domain.metis.Post;
+import de.tum.in.www1.artemis.domain.metis.PostSortCriterion;
 import de.tum.in.www1.artemis.domain.metis.UserRole;
 import de.tum.in.www1.artemis.domain.plagiarism.PlagiarismCase;
 import de.tum.in.www1.artemis.repository.metis.PostRepository;
@@ -46,6 +50,8 @@ class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucketJiraTe
 
     @Autowired
     private PlagiarismCaseRepository plagiarismCaseRepository;
+
+    private List<Post> existingPostsAndConversationPosts;
 
     private List<Post> existingPosts;
 
@@ -86,22 +92,24 @@ class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucketJiraTe
         student1 = database.getUserByLogin("student1");
 
         // initialize test setup and get all existing posts (there are 4 posts with lecture context, 4 with exercise context,
-        // 1 plagiarism case and 3 with course-wide context - initialized): 12 posts in total
-        existingPosts = database.createPostsWithinCourse();
+        // 1 plagiarism case, 3 with course-wide context and 3 with conversation initialized - initialized): 15 posts in total
+        existingPostsAndConversationPosts = database.createPostsWithinCourse();
 
-        existingCoursePosts = existingPosts.stream().filter(post -> post.getPlagiarismCase() == null).toList();
+        existingPosts = existingPostsAndConversationPosts.stream().filter(post -> post.getConversation() == null).toList();
+
+        existingCoursePosts = existingPosts.stream().filter(coursePost -> (coursePost.getPlagiarismCase() == null)).collect(Collectors.toList());
 
         // filter existing posts with exercise context
-        existingExercisePosts = existingCoursePosts.stream().filter(coursePost -> (coursePost.getExercise() != null)).toList();
+        existingExercisePosts = existingPosts.stream().filter(coursePost -> (coursePost.getExercise() != null)).toList();
 
         // filter existing posts with lecture context
-        existingLecturePosts = existingCoursePosts.stream().filter(coursePost -> (coursePost.getLecture() != null)).toList();
+        existingLecturePosts = existingPosts.stream().filter(coursePost -> (coursePost.getLecture() != null)).toList();
 
         // filter existing posts with plagiarism context
         existingPlagiarismPosts = existingPosts.stream().filter(coursePost -> coursePost.getPlagiarismCase() != null).toList();
 
         // filter existing posts with course-wide context
-        existingCourseWidePosts = existingCoursePosts.stream().filter(coursePost -> (coursePost.getCourseWideContext() != null)).toList();
+        existingCourseWidePosts = existingPosts.stream().filter(coursePost -> (coursePost.getCourseWideContext() != null)).toList();
 
         course = existingExercisePosts.get(0).getExercise().getCourseViaExerciseGroupOrCourseMember();
 
@@ -158,6 +166,7 @@ class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucketJiraTe
         postContextFilter.setExerciseId(exerciseId);
         assertThat(existingExercisePosts).hasSameSizeAs(postRepository.findPosts(postContextFilter, null, false, null));
         verify(groupNotificationService, times(0)).notifyAllGroupsAboutNewPostForExercise(any(), any());
+
     }
 
     @Test
@@ -224,7 +233,7 @@ class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucketJiraTe
         postToSave.setCourseWideContext(CourseWideContext.ANNOUNCEMENT);
 
         request.postWithResponseBody("/api/courses/" + courseId + "/posts", postToSave, Post.class, HttpStatus.FORBIDDEN);
-        assertThat(existingPosts.size()).isEqualTo(postRepository.count());
+        assertThat(existingPostsAndConversationPosts.size()).isEqualTo(postRepository.count());
         verify(groupNotificationService, times(0)).notifyAllGroupsAboutNewAnnouncement(any(), any());
     }
 
@@ -252,7 +261,7 @@ class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucketJiraTe
         Post existingPostToSave = existingPosts.get(0);
 
         request.postWithResponseBody("/api/courses/" + courseId + "/posts", existingPostToSave, Post.class, HttpStatus.BAD_REQUEST);
-        assertThat(existingPosts.size()).isEqualTo(postRepository.count());
+        assertThat(existingPostsAndConversationPosts.size()).isEqualTo(postRepository.count());
         verify(groupNotificationService, times(0)).notifyAllGroupsAboutNewPostForExercise(any(), any());
     }
 
@@ -655,7 +664,7 @@ class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucketJiraTe
         List<Post> returnedPosts = request.getList("/api/courses/" + courseId + "/posts", HttpStatus.OK, Post.class, params);
         database.assertSensitiveInformationHidden(returnedPosts);
         // get posts of current user and compare
-        assertThat(returnedPosts).isEqualTo(existingCoursePosts.stream().filter(post -> student1.getId().equals(post.getAuthor().getId())).toList());
+        assertThat(returnedPosts).isEqualTo(existingPosts.stream().filter(post -> student1.getId().equals(post.getAuthor().getId())).toList());
     }
 
     @Test
@@ -680,7 +689,7 @@ class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucketJiraTe
 
         var params = new LinkedMultiValueMap<String, String>();
         params.add("searchText", "#1");
-        params.add("pagingEnabled", "true"); // search by text
+        params.add("pagingEnabled", "true"); // search by text, only available in course discussions page where paging is enabled
 
         List<Post> returnedPosts = request.getList("/api/courses/" + courseId + "/posts", HttpStatus.OK, Post.class, params);
         database.assertSensitiveInformationHidden(returnedPosts);
@@ -703,53 +712,41 @@ class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucketJiraTe
     @Test
     @WithMockUser(username = "student1", roles = "USER")
     void testGetPostsForCourse_OrderByCreationDateDESC() throws Exception {
-        // TODO: Disabled until next refactoring due to incompatibility of DISTINCT & ORDER BY in H2 DB during testing
-        // TODO: https://github.com/h2database/h2database/issues/408
+        var params = new LinkedMultiValueMap<String, String>();
 
-        // PostSortCriterion sortCriterion = PostSortCriterion.CREATION_DATE;
-        // SortingOrder sortingOrder = SortingOrder.DESCENDING;
-        //
-        // var params = new LinkedMultiValueMap<String, String>();
-        //
-        // // ordering only available in course discussions page, where paging is enabled
-        // params.add("pagingEnabled", "true");
-        // params.add("page", "0");
-        // params.add("size", String.valueOf(MAX_POSTS_PER_PAGE));
-        //
-        // params.add("postSortCriterion", sortCriterion.toString());
-        // params.add("sortingOrder", sortingOrder.toString());
-        //
-        // List<Post> returnedPosts = request.getList("/api/courses/" + courseId + "/posts", HttpStatus.OK, Post.class, params);
-        // database.assertSensitiveInformationHidden(returnedPosts);
-        // existingPosts.sort(Comparator.comparing(Post::getCreationDate).reversed());
-        //
-        // assertThat(returnedPosts).isEqualTo(existingPosts);
+        // ordering only available in course discussions page, where paging is enabled
+        params.add("pagingEnabled", "true");
+        params.add("page", "0");
+        params.add("size", String.valueOf(MAX_POSTS_PER_PAGE));
+
+        params.add("postSortCriterion", PostSortCriterion.CREATION_DATE.toString());
+        params.add("sortingOrder", SortingOrder.DESCENDING.toString());
+
+        List<Post> returnedPosts = request.getList("/api/courses/" + courseId + "/posts", HttpStatus.OK, Post.class, params);
+        database.assertSensitiveInformationHidden(returnedPosts);
+        existingCoursePosts.sort(Comparator.comparing(Post::getCreationDate).reversed());
+
+        assertThat(returnedPosts).isEqualTo(existingCoursePosts);
     }
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
     void testGetPostsForCourse_OrderByCreationDateASC() throws Exception {
-        // TODO: Disabled until next refactoring due to incompatibility of DISTINCT & ORDER BY in H2 DB during testing
-        // TODO: https://github.com/h2database/h2database/issues/408
+        var params = new LinkedMultiValueMap<String, String>();
 
-        // PostSortCriterion sortCriterion = PostSortCriterion.CREATION_DATE;
-        // SortingOrder sortingOrder = SortingOrder.ASCENDING;
-        //
-        // var params = new LinkedMultiValueMap<String, String>();
-        //
-        // // ordering only available in course discussions page, where paging is enabled
-        // params.add("pagingEnabled", "true");
-        // params.add("page", "0");
-        // params.add("size", String.valueOf(MAX_POSTS_PER_PAGE));
-        //
-        // params.add("postSortCriterion", sortCriterion.toString());
-        // params.add("sortingOrder", sortingOrder.toString());
-        //
-        // List<Post> returnedPosts = request.getList("/api/courses/" + courseId + "/posts", HttpStatus.OK, Post.class, params);
-        // database.assertSensitiveInformationHidden(returnedPosts);
-        // existingPosts.sort(Comparator.comparing(Post::getCreationDate));
-        //
-        // assertThat(returnedPosts).isEqualTo(existingPosts);
+        // ordering only available in course discussions page, where paging is enabled
+        params.add("pagingEnabled", "true");
+        params.add("page", "0");
+        params.add("size", String.valueOf(MAX_POSTS_PER_PAGE));
+
+        params.add("postSortCriterion", PostSortCriterion.CREATION_DATE.toString());
+        params.add("sortingOrder", SortingOrder.ASCENDING.toString());
+
+        List<Post> returnedPosts = request.getList("/api/courses/" + courseId + "/posts", HttpStatus.OK, Post.class, params);
+        database.assertSensitiveInformationHidden(returnedPosts);
+        existingCoursePosts.sort(Comparator.comparing(Post::getCreationDate));
+
+        assertThat(returnedPosts).isEqualTo(existingCoursePosts);
     }
 
     @Test
@@ -777,7 +774,7 @@ class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucketJiraTe
         Post postToDelete = existingPosts.get(0);
 
         request.delete("/api/courses/" + courseId + "/posts/" + postToDelete.getId(), HttpStatus.OK);
-        assertThat(postRepository.count()).isEqualTo(existingPosts.size() - 1);
+        assertThat(postRepository.count()).isEqualTo(existingPostsAndConversationPosts.size() - 1);
     }
 
     @Test
@@ -787,7 +784,7 @@ class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucketJiraTe
         Post postToNotDelete = existingPosts.get(1);
 
         request.delete("/api/courses/" + courseId + "/posts/" + postToNotDelete.getId(), HttpStatus.FORBIDDEN);
-        assertThat(postRepository.count()).isEqualTo(existingPosts.size());
+        assertThat(postRepository.count()).isEqualTo(existingPostsAndConversationPosts.size());
     }
 
     @Test
@@ -799,7 +796,7 @@ class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucketJiraTe
         postRepository.save(postToNotDelete);
 
         request.delete("/api/courses/" + courseId + "/posts/" + postToNotDelete.getId(), HttpStatus.FORBIDDEN);
-        assertThat(postRepository.count()).isEqualTo(existingPosts.size());
+        assertThat(postRepository.count()).isEqualTo(existingPostsAndConversationPosts.size());
     }
 
     @Test
@@ -809,17 +806,17 @@ class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucketJiraTe
 
         request.delete("/api/courses/" + courseId + "/posts/" + postToDelete.getId(), HttpStatus.OK);
         assertThat(postRepository.findById(postToDelete.getId())).isEmpty();
-        assertThat(postRepository.count()).isEqualTo(existingPosts.size() - 1);
+        assertThat(postRepository.count()).isEqualTo(existingPostsAndConversationPosts.size() - 1);
 
         postToDelete = existingExercisePosts.get(0);
 
         request.delete("/api/courses/" + courseId + "/posts/" + postToDelete.getId(), HttpStatus.OK);
-        assertThat(postRepository.count()).isEqualTo(existingPosts.size() - 2);
+        assertThat(postRepository.count()).isEqualTo(existingPostsAndConversationPosts.size() - 2);
 
         postToDelete = existingCourseWidePosts.get(0);
 
         request.delete("/api/courses/" + courseId + "/posts/" + postToDelete.getId(), HttpStatus.OK);
-        assertThat(postRepository.count()).isEqualTo(existingPosts.size() - 3);
+        assertThat(postRepository.count()).isEqualTo(existingPostsAndConversationPosts.size() - 3);
     }
 
     @Test
@@ -854,7 +851,7 @@ class PostIntegrationTest extends AbstractSpringIntegrationBambooBitbucketJiraTe
         assertThat(createdPost).isNotNull();
         assertThat(createdPost.getId()).isNotNull();
 
-        // check if title, content, creation data, and tags are set correctly on creation
+        // check if title, content, creation date, and tags are set correctly on creation
         assertThat(createdPost.getTitle()).isEqualTo(expectedPost.getTitle());
         assertThat(createdPost.getContent()).isEqualTo(expectedPost.getContent());
         assertThat(createdPost.getCreationDate()).isNotNull();
